Travis will now understand .travis.yml and run all (integration and unit) tests. Squashed commit of the following:
commit b6a9ac86a89d6006bdb2e4649f7fe103adfe702d
Author: Dawid Pura <puradawid@gmail.com>
Date:   Sun Apr 6 12:17:54 2014 +0200

    Travis runs tests from all apps

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ python:
 # install dependencies
 install: "pip install -r requirements.txt"
 
-script: "python ./src/manage.py test src/tests"
+script: 
+    - "cd src && python ./manage.py test"
+    - "python ./manage.py test tests"
