--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ wsgiref==0.1.2
 django-cron==0.3.3
 django-widget-tweaks==1.3
 django-braces==1.4.0
+Pygments==1.6
 django-password-reset==0.7
 django-mptt==0.6.0
