--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ django-braces==1.4.0
 Pygments==1.6
 django-password-reset==0.7
 django-mptt==0.6.0
-django-socia-auth==0.7.28
+django-social-auth==0.7.28
